interview-task-job-management/src/main/java/com/example/testJobManagement/error/JobUpdateFailedException.java
package com.example.testJobManagement.error;

public class JobUpdateFailedException extends RuntimeException {

    public JobUpdateFailedException(String msg) {
        super(msg);
    }

}
